--- a/iOS/KSCrash-iOS.xcodeproj/xcshareddata/xcschemes/KSCrash_static.xcscheme
+++ b/iOS/KSCrash-iOS.xcodeproj/xcshareddata/xcschemes/KSCrash_static.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "EDF2BE781CCF15AD004BADF4"
-               BuildableName = "KSCrash.framework"
+               BuildableName = "KSCrashStatic.framework"
                BlueprintName = "KSCrash_static"
                ReferencedContainer = "container:KSCrash-iOS.xcodeproj">
             </BuildableReference>
@@ -44,7 +44,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "EDF2BE781CCF15AD004BADF4"
-            BuildableName = "KSCrash.framework"
+            BuildableName = "KSCrashStatic.framework"
             BlueprintName = "KSCrash_static"
             ReferencedContainer = "container:KSCrash-iOS.xcodeproj">
          </BuildableReference>
@@ -60,7 +60,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "EDF2BE781CCF15AD004BADF4"
-            BuildableName = "KSCrash.framework"
+            BuildableName = "KSCrashStatic.framework"
             BlueprintName = "KSCrash_static"
             ReferencedContainer = "container:KSCrash-iOS.xcodeproj">
          </BuildableReference>
